upload enhanced version

--- a/about.html
+++ b/about.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" itemscope itemtype="https://schema.org/WebPage">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -36,7 +36,7 @@
     }
   </script>
 </head>
-<body></body>
+<body itemscope itemtype="https://schema.org/WebPage">
 
   <!-- Skip Link -->
   <a href="#main-content" class="skip-link" role="link" aria-label="Skip to main content"> 
@@ -63,6 +63,7 @@
         </div>
       </div>
     </nav>
+    
   </header>
 
   <main id="main-content">
