--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" itemscope itemtype="https://schema.org/WebPage">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -36,7 +36,7 @@
     }
   </script>
 </head>
-<body></body>
+<body itemscope itemtype="https://schema.org/WebPage">
 
   <!-- Skip Link -->
   <a href="#main-content" class="skip-link" role="link" aria-label="Skip to main content"> 
@@ -45,20 +45,20 @@
     </span> 
   </a>
 
-  <header>
-    <nav class="navbar navbar-expand-lg navbar-light custom-navbar" role="navigation">
+  <header role="banner" itemscope itemtype="https://schema.org/WPHeader">
+    <nav class="navbar navbar-expand-lg navbar-light custom-navbar" role="navigation" aria-label="Primary Navigation" itemscope itemtype="https://schema.org/SiteNavigationElement">
       <div class="container-fluid px-4">
-        <a class="navbar-brand fw-bold" href="index.html">U P R I Z I N G</a>
+        <a class="navbar-brand fw-bold" href="index.html" itemprop="url">U P R I Z I N G</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
-          <ul class="navbar-nav ms-auto">
-            <li class="nav-item"><a class="nav-link" href="index.html">Home</a></li>
-            <li class="nav-item"><a class="nav-link" href="blog.html">Blog</a></li>
-            <li class="nav-item"><a class="nav-link" href="cases.html">Cases</a></li>
-            <li class="nav-item"><a class="nav-link" href="about.html">About</a></li>
-            <li class="nav-item"><a class="nav-link" href="contact.html">Contact</a></li>
+          <ul class="navbar-nav ms-auto" role="list">
+            <li class="nav-item" role="listitem"><a class="nav-link" href="index.html" role="link">Home</a></li>
+            <li class="nav-item" role="listitem"><a class="nav-link" href="blog.html" role="link">Blog</a></li>
+            <li class="nav-item" role="listitem"><a class="nav-link" href="cases.html" role="link">Cases</a></li>
+            <li class="nav-item" role="listitem"><a class="nav-link" href="about.html" role="link">About</a></li>
+            <li class="nav-item" role="listitem"><a class="nav-link" href="contact.html" role="link">Contact</a></li>
           </ul>
         </div>
       </div>
