upload the enhanced version 2

--- a/contact.html
+++ b/contact.html
@@ -125,7 +125,7 @@
           <div class="col-12 col-md-6 p-5">
             <h3 class="mb-3">Why Choose Us?</h3>
             <p class="card-text">With over 10 years of experience, 95+ successful projects, and a strong focus on 3D marketing, we bring creativity and precision to every project. From concept to completion, we deliver results that make your brand stand out. Let’s bring your vision to life!</p>
-            <a href="#" class="btn btn-dark text-white rounded-pill px-4 mt-3">Talk to us</a>
+            <a href="contact.html" class="btn btn-dark text-white rounded-pill px-4 mt-3">Talk to us</a>
           </div>
           <div class="col-12 col-md-6">
             <img src="images/bugatticar.png" alt="photo of the Bugatti car" class="img-fluid w-100 h-100 object-fit-cover">
